# Auto-Contract

./: .gitignore  AGETN.md  PRODUCTS.MD  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
auth/: login-credentials.example.json  login-credentials.json
docs/: ui-ux-design.md  ui-ux-prototype.html
scripts/: add-auth-credential.mjs  prepare-auth-kv.mjs  start-dev-server.mjs  sync-auth-kv.mjs
src/: App.tsx  contractStandardSections.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/components/ui/: button.tsx
src/lib/: desktop-api.ts
templates/: Commercial Invoice Template.xlsx  PI Template.xlsx  Packing List Template.xlsx  Sales Contract Template.xlsx
workers/auth/: README.md  wrangler.jsonc
workers/auth/src/: index.ts
