[package]
name = "auto-contact-desktop"
version = "1.0.13"
description = "外贸单据生成桌面应用"
authors = ["YS"]
edition = "2021"

[lib]
name = "auto_contact_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm"] }
zip = "0.6"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
